# zero2prod-axum

./: .env  Cargo.toml  README.md  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscription.rs
tests/: health_check.rs
